<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preference"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.androidgithubproj.PreferenceActivity">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ed_sPref"
    android:hint="@string/write"
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_sPref"
        android:id="@+id/btn_add"
        android:text="@string/add"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/there_are_sending_me"
        android:id="@+id/edit_sends"
        android:layout_alignParentBottom="true"
        />
    <Button
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close_preference_btn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/edit_sends"
        android:id="@+id/btn_send"
        android:text="@string/send"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>
